# markji-wordcard-assistant

./: README.md  main.py  pyproject.toml  unit.py
examples/: word_with_meaning.txt  words.txt
markji_wordcard_assistant/: __init__.py  __main__.py  trans.py  units.py
markji_wordcard_assistant/fast_api/: exception.py  main.py
markji_wordcard_assistant/fast_api/controller/: jobs_controller.py  trans_file.py  trans_text.py
markji_wordcard_assistant/markji_api/: api.py
markji_wordcard_assistant/open_api/: jobs.py  main.py  result.py
markji_wordcard_assistant/voice/: edge.py  elevenlab.py  markji_native.py  openai_tts.py  sepcific.md  youdao.py
